cpumap: create a new file for patchset-V2 benchmarks
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/areas/cpumap/cpumap02-optimizations.org
+++ b/areas/cpumap/cpumap02-optimizations.org
@@ -1,7 +1,9 @@
 # -*- fill-column: 76; -*-
-#+TITLE: CPUMAP optimizations
+#+TITLE: CPUMAP optimizations patchset-V1
 #+CATEGORY: CPUMAP
 #+OPTIONS: ^:nil
+
+Next benchmark iteration in [[file:cpumap03-optimizations.org]].
 
 * WARNING: F27 issue
 
